--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Depot</title>
+    <title>Pragprog Books Online Store</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,5 +13,21 @@
    <%= content_tag :main, class: controller.controller_name do %>
      <%= yield %>
    <% end %>
+   </section>
   </body>
+  
+  <header class="main">
+  <%= image_tag 'logo.png', alt: 'The Pragmatic Bookshelf' %>
+  <h1><%= @page_title %></h1>
+</header>
+
+<section class="content">
+  <nav class="side_nav">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/questions">Questions</a></li>
+      <li><a href="/news">News</a></li>
+      <li><a href="/contact">Contact</a></li>
+    </ul>
+  </nav>
 </html>
