--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -8,3 +8,6 @@
     <li><%= item.product.title %> &times; <%= item.quantity %></li>
   <% end %>
 </ul>
+
+<%= button_to 'Empty cart', @cart, method: :delete,
+      data: { confirm: 'Are you sure?' } %>
